--- a/css/style.css
+++ b/css/style.css
@@ -3524,7 +3524,9 @@ table {
         .comment_block .individuals_block_slide_content .text_block {
           width: 100%;
           float: left;
-          position: relative; }
+          position: relative;
+          min-height: 54px;
+          box-sizing: border-box; }
           .comment_block .individuals_block_slide_content .text_block .all_read {
             font: 10px/20px 'Georgia-BoldItalic';
             font-style: italic;
@@ -5880,7 +5882,7 @@ table {
             color: #131313; }
           .product__all_info_info_line_row .info .art {
             float: left;
-            font: 14px/27px 'Roboto-Medium';
+            font: 14px/27px  'Roboto-BoldItalic';
             color: #919191;
             font-style: italic; }
         .product__all_info_info_line_row:nth-child(even) {
@@ -6894,32 +6896,32 @@ table {
             .section_product_wrap_price_wrap_section_block_block_line .power_line i {
               display: inline-block; }
           .section_product_wrap_price_wrap_section_block_block_line .icon1 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: 0px 0px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -261px -479px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon2 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -87px 0px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -87px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon3 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: 0px -87px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -174px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon4 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -87px -87px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -261px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon5 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -174px 0px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -348px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon6 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -174px -87px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -435px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon7 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: 0px -174px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -522px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon8 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -87px -174px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -609px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .icon9 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -174px -174px; }
+            background-image: url("../img/sprite_section.png");
+            background-position: -696px -392px; }
           .section_product_wrap_price_wrap_section_block_block_line .power {
             width: 88px;
             height: 88px;
@@ -7009,56 +7011,56 @@ table {
               color: #e20505;
               font-weight: bold; }
         .section_product_wrap_rig .block .icon1 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px 0px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -87px -479px; }
         .section_product_wrap_rig .block .icon2 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px 0px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -609px -566px; }
         .section_product_wrap_rig .block .icon3 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px -87px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -696px -479px; }
         .section_product_wrap_rig .block .icon4 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px -174px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -261px -566px; }
         .section_product_wrap_rig .block .icon5 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px -261px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -348px -566px; }
         .section_product_wrap_rig .block .icon6 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px -261px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -435px -566px; }
         .section_product_wrap_rig .block .icon7 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px -261px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -522px -566px; }
         .section_product_wrap_rig .block .icon8 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px -261px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -0 -392px; }
         .section_product_wrap_rig .block .icon9 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -348px 0px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -348px -479px; }
         .section_product_wrap_rig .block .icon10 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px -174px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -174px -566px; }
         .section_product_wrap_rig .block .icon11 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px -87px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -435px -479px; }
         .section_product_wrap_rig .block .icon12 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px -87px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -522px -479px; }
         .section_product_wrap_rig .block .icon13 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px 0px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -174px -479px; }
         .section_product_wrap_rig .block .icon14 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px -87px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -609px -479px; }
         .section_product_wrap_rig .block .icon15 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px -174px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -0 -566px; }
         .section_product_wrap_rig .block .icon16 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px -174px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -87px -566px; }
         .section_product_wrap_rig .block .icon17 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px 0px; }
+          background-image: url("../img/sprite_section.png");
+          background-position: -0 -479px; }
       .section_product_wrap_rig .big {
         width: 40%; }
         @media (max-width: 758px) {
