--- a/sass/price.scss
+++ b/sass/price.scss
@@ -903,40 +903,40 @@
             }
           }
           .icon1 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: 0px 0px;
+            background-image: url("../img/sprite_section.png");
+            background-position: -261px -479px;
           }
           .icon2 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -87px 0px;
+            background-image: url("../img/sprite_section.png");
+            background-position:  -87px -392px;
           }
           .icon3 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: 0px -87px;
+            background-image: url("../img/sprite_section.png");
+            background-position: -174px -392px;
           }
           .icon4 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -87px -87px;
+            background-image: url("../img/sprite_section.png");
+            background-position:-261px -392px;
           }
           .icon5 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -174px 0px;
+            background-image: url("../img/sprite_section.png");
+            background-position:-348px -392px;
           }
           .icon6 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -174px -87px;
+            background-image: url("../img/sprite_section.png");
+            background-position: -435px -392px;
           }
           .icon7 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: 0px -174px;
+            background-image: url("../img/sprite_section.png");
+            background-position: -522px -392px;
           }
           .icon8 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -87px -174px;
+            background-image: url("../img/sprite_section.png");
+            background-position: -609px -392px;
           }
           .icon9 {
-            background-image: url("../img/sprite_icon1.png");
-            background-position: -174px -174px;
+            background-image: url("../img/sprite_section.png");
+            background-position: -696px -392px;
           }
 
           .power {
@@ -1057,72 +1057,72 @@
           }
         }
         .icon1 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px 0px;
+          background-image: url("../img/sprite_section.png");
+          background-position:-87px -479px;
         }
         .icon2 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px 0px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -609px -566px;
         }
         .icon3 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px -87px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -696px -479px;
         }
         .icon4 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px -174px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -261px -566px;
         }
         .icon5 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px -261px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -348px -566px;
         }
         .icon6 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px -261px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -435px -566px;
         }
         .icon7 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px -261px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -522px -566px;
         }
         .icon8 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -261px -261px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -0 -392px;
         }
         .icon9 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -348px 0px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -348px -479px;
         }
         .icon10 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px -174px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -174px -566px;
         }
         .icon11 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px -87px;
+          background-image: url("../img/sprite_section.png");
+          background-position:  -435px -479px;
         }
         .icon12 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px -87px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -522px -479px;
         }
         .icon13 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px 0px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -174px -479px;
         }
         .icon14 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -174px -87px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -609px -479px;
         }
         .icon15 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px -174px;
+          background-image: url("../img/sprite_section.png");
+          background-position:  -0 -566px;
         }
         .icon16 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: -87px -174px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -87px -566px;
         }
         .icon17 {
-          background-image: url("../img/sprite_icon2.png");
-          background-position: 0px 0px;
+          background-image: url("../img/sprite_section.png");
+          background-position:  -0 -479px;
         }
       }
       .big {
