--- a/sass/product_block.scss
+++ b/sass/product_block.scss
@@ -420,7 +420,7 @@
           }
           .art {
             float: left;
-            font: 14px/27px 'Roboto-Medium';
+            font: 14px/27px  'Roboto-BoldItalic';
             color: #919191;
             font-style: italic;
           }
