--- a/css/black_panel.css
+++ b/css/black_panel.css
@@ -163,13 +163,17 @@
             width: 90px;
             height: 94px;
             text-align: center; }
-            .black_panel_servises ul .spec_wrap .spec_block_img img {
-              margin-top: 19.5px; }
+            .black_panel_servises ul .spec_wrap .spec_block_img .icon {
+              margin-top: 19.5px;
+              display: inline-block;
+              width: 55px;
+              height: 55px;
+              background: url("../img/sprite_header.png") -362px -153px; }
           .black_panel_servises ul .spec_wrap .spec_block_text {
             float: left;
             width: 236px;
             height: 94px; }
-            .black_panel_servises ul .spec_wrap .spec_block_text h3 {
+            .black_panel_servises ul .spec_wrap .spec_block_text h4 {
               width: 100%;
               font: 14px/20px Verdana;
               margin-top: 2px;
