--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -1060,14 +1060,24 @@
     }
     &_retail {
       display: block;
-      img {
+      .icon {
         margin-top: -27px;
+        width: 73px;
+        height: 73px;
+        background: url("../img/sprite_header.png");
+        background-position: -362px -80px;
+        display: inline-block;
       }
     }
     &_gross {
       display: block;
-      img {
+      .icon {
         margin-top: -36px;
+        width: 91px;
+        height: 80px;
+        background-image: url("../img/sprite_header.png");
+        background-position: -362px -0;
+        display: inline-block;
       }
       p {
         margin-top: 5px;
@@ -1508,15 +1518,23 @@
           color: #620909;
         }
       }
-      img {
+      .icon{
         margin-top: -24px;
+        display: inline-block;
+        width: 48px; height: 51px;
+        background: url('../img/sprite_header.png') -362px -208px;
+        margin-left: -12px;
       }
     }
     &_spec {
       display: block;
       min-height: 77px;
-      img {
+      .icon{
         margin-top: -25px;
+        display: inline-block;
+        width: 55px; height: 55px;
+        background: url('../img/sprite_header.png') -362px -153px;
+        margin-left: -12px;
       }
     }
   }
