--- a/sass/black_panel.scss
+++ b/sass/black_panel.scss
@@ -131,7 +131,7 @@
           color: #ffff20;
           text-decoration: underline;
           &:hover{
-            color: #b80000;
+            color: #620909;
           }
           &:visited{
             color: #7a0505;
@@ -174,7 +174,7 @@
           color: #FFFFFF;
           text-decoration: underline;
           &:hover{
-            color: #ffff20;
+            color:  #620909;
           }
           &:visited{
             color: #7a0505;
@@ -256,7 +256,7 @@
       box-sizing: border-box;
       margin-top: 10px;
       &:hover{
-        color: #074e23;
+        color:  #620909;
         text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52)
       }
     }
@@ -288,7 +288,7 @@
           text-decoration: underline;
           color: #ffff20;
           &:hover{
-            color: #b80000;
+            color:  #620909;
           }
           &:visited{
             color: #7a0505;
@@ -331,7 +331,7 @@
           color: #ffff20;
           display: inline-block;
           &:hover{
-            color: #b80000;
+            color:  #620909;
           }
         }
         p {
