--- a/css/style.css
+++ b/css/style.css
@@ -3880,7 +3880,7 @@ table {
           color: #ffff20;
           text-decoration: underline; }
           .black_panel_coneiner_menu ul li a:hover {
-            color: #b80000; }
+            color: #620909; }
           .black_panel_coneiner_menu ul li a:visited {
             color: #7a0505; }
         .black_panel_coneiner_menu ul li p {
@@ -3914,7 +3914,7 @@ table {
           color: #FFFFFF;
           text-decoration: underline; }
           .black_panel_servises ul li a:hover {
-            color: #ffff20; }
+            color: #620909; }
           .black_panel_servises ul li a:visited {
             color: #7a0505; }
       .black_panel_servises ul .spec_wrap {
@@ -3976,7 +3976,7 @@ table {
       box-sizing: border-box;
       margin-top: 10px; }
       .black_panel_actions_zag:hover {
-        color: #074e23;
+        color: #620909;
         text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52); }
     .black_panel_actions_pod_zag {
       width: 100%;
@@ -4004,7 +4004,7 @@ table {
           text-decoration: underline;
           color: #ffff20; }
           .black_panel_actions ul li a:hover {
-            color: #b80000; }
+            color: #620909; }
           .black_panel_actions ul li a:visited {
             color: #7a0505; }
         .black_panel_actions ul li p {
@@ -4038,7 +4038,7 @@ table {
           color: #ffff20;
           display: inline-block; }
           .black_panel_kategories ul li a:hover {
-            color: #b80000; }
+            color: #620909; }
         .black_panel_kategories ul li p {
           font: 14px/36px 'Georgia-BoldItalic';
           color: #afafaf;
